--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "html-validate": "8.9.1",
+    "nodemon": "^3.1.0",
     "prettier": "2.8.7"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "node ./server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1"
   }
 }
