--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "type": "module",
   "scripts": {
     "start": "node ./server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1"
   }
 }
