--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7"
   }
