--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "html-validate": "8.9.1",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.2",
     "prettier": "2.8.7"
   },
   "type": "module",
@@ -18,9 +18,10 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.10.0"
   }
 }
