--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
