--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "cors": "^2.8.5",
